dimagi-SalesforceFB/src/objects/Deployment__c.object
<CustomObject>
    <description>For Commcare integration</description>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countries__c</fullName>
        <label>countries</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment</label>
    <nameField>
        <displayFormat>Dep-{000000}</displayFormat>
        <label>Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>